<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sat">sat</string>
    <string name="sats">sats</string>
    <string name="new_contact">New Contact</string>
    <string name="default_sats_amount">…</string>
    <string name="uploading">Uploading</string>
    <string name="unknown">Unknown</string>
    <string name="decryption_error">DECRYPTION ERROR...</string>
    <string name="null_name_error">ERROR: NULL NAME</string>
    <string name="public_key">Public Key</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="material_icon_name_lock_outline" translatable="false">lock_outline</string>
    <string name="material_icon_name_lock" translatable="false">lock</string>
    <string name="material_icon_name_lock_open" translatable="false">lock_open</string>
    <string name="material_icon_name_error" translatable="false">error</string>
    <string name="material_icon_name_bolt" translatable="false">flash_on</string>
    <string name="material_icon_name_backspace_button" translatable="false">backspace</string>
    <string name="material_icon_name_call_button" translatable="false">phone</string>
    <string name="material_icon_name_close" translatable="false">close</string>
    <string name="material_icon_name_nav_back" translatable="false">arrow_back</string>
    <string name="material_icon_name_nav_forward" translatable="false">arrow_forward</string>
    <string name="material_icon_name_arrow_outward" translatable="false">arrow_outward</string>
    <string name="material_icon_name_file_attachment" translatable="false">insert_drive_file</string>
    <string name="material_icon_name_file_pdf" translatable="false">picture_as_pdf</string>
    <string name="material_icon_name_file_download" translatable="false">file_download</string>
    <string name="material_icon_name_cloud_download" translatable="false">cloud_download</string>
    <string name="material_icon_name_play_button" translatable="false">play_arrow</string>
    <string name="material_icon_name_chevron_right_button" translatable="false">chevron_right</string>
    <string name="material_icon_name_brightness_button" translatable="false">brightness_1</string>
    <string name="material_icon_name_pause_button" translatable="false">pause</string>
    <string name="material_icon_name_volume_up" translatable="false">volume_up</string>
    <string name="material_icon_name_video_camera" translatable="false">videocam</string>
    <string name="material_icon_name_microphone" translatable="false">mic</string>
    <string name="material_icon_name_payment_accepted" translatable="false">check</string>
    <string name="material_icon_name_payment_denied" translatable="false">error_outline</string>
    <string name="material_icon_name_message_editor_send" translatable="false">send</string>
    <string name="material_icon_name_message_editor_attachment" translatable="false">add</string>
    <string name="material_icon_name_circled_close_button" tools:ignore="ButtonCase" translatable="false">cancel</string>
    <string name="material_icon_name_help_outline" translatable="false">help_outline</string>
    <string name="material_icon_name_replay" translatable="false">replay</string>
    <string name="material_icon_name_key" translatable="false">vpn_key</string>
    <string name="material_icon_name_dismiss_modal_down" translatable="false">keyboard_arrow_down</string>
    <string name="material_icon_name_gif" translatable="false">gif</string>
    <string name="material_icon_name_verified_user" translatable="false">verified_user</string>
    <string name="material_icon_name_play_outline" translatable="false">play_circle_outline</string>
    <string name="material_icon_name_play_circle_filled" translatable="false">play_circle_filled</string>
    <string name="material_icon_name_cancel" translatable="false">cancel</string>
    <string name="material_icon_name_add" translatable="false">add</string>
    <string name="material_icon_name_lens" translatable="false">lens</string>
    <string name="material_icon_name_block" translatable="false">block</string>
    <string name="material_icon_name_search" translatable="false">search</string>
    <string name="material_icon_name_done" translatable="false">done</string>
    <string name="material_icon_name_expand_more" translatable="false">expand_more</string>
    <string name="material_icon_name_expand_less" translatable="false">expand_less</string>
    <string name="material_icon_name_more_horizontal" translatable="false">more_horiz</string>
    <string name="material_icon_name_message_action_delete" translatable="false">delete</string>
    <string name="material_icon_name_message_action_copy_text" translatable="false">content_copy</string>
    <string name="material_icon_name_message_action_copy_link" translatable="false">link</string>
    <string name="material_icon_name_message_action_copy_pubkey" translatable="false">supervisor_account</string>
    <string name="material_icon_name_message_action_copy_call_link" translatable="false">link</string>
    <string name="material_icon_name_message_action_reply" translatable="false">reply</string>
    <string name="material_icon_name_message_action_resend" translatable="false">redo</string>
    <string name="material_icon_name_message_action_save_file" translatable="false">file_download</string>
    <string name="material_icon_name_message_action_flag" translatable="false">flag</string>
    <string name="material_icon_name_invite_pending" translatable="false">error</string>
    <string name="material_icon_name_invite_payment_pending" translatable="false">payment</string>
    <string name="material_icon_name_invite_payment_sent" translatable="false">sync</string>
    <string name="material_icon_name_invite_ready" translatable="false">done</string>
    <string name="material_icon_name_invite_in_progress" translatable="false">sync</string>
    <string name="material_icon_name_invite_expired" translatable="false">error</string>
    <string name="material_icon_name_invite_complete" translatable="false">done</string>
    <string name="material_icon_name_group_action_accept_join_request" translatable="false">done</string>
    <string name="material_icon_name_group_action_reject_join_request" translatable="false">close</string>
    <string name="media_type_label_audio">Audio</string>
    <string name="media_type_label_video">Video</string>
    <string name="group_pin_label">Privacy Setting</string>
    <string name="new_contact_pin_standard_private_label">Standard PIN / Privacy PIN</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="relay_url_http_message">The Relay URL to be saved is using \'http\'. Network traffic will not be encrypted. Https is strongly recommended. Please confirm the URL Scheme to use.</string>
    <string name="relay_url_http_negative_keep_http">http</string>
    <string name="relay_url_http_positive_change_to_https">https</string>
    <string name="payment_request">Payment Request</string>
    <string name="error_payment_message">Payment error: %s </string>
    <string name="amount_n_sats">Amount: %d sats</string>
    <string name="failed_to_request_payment">Failed to request payment</string>
    <string name="failed_to_approve_member">Failed to approve member</string>
    <string name="failed_to_reject_member">Failed to reject member</string>
    <string name="newsletter_article">NEWSLETTER ARTICLE</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="feed_search_following_section">FOLLOWING</string>
    <string name="feed_search_directory_section">DIRECTORY</string>
    <string name="recommendations">Recommendations</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="loading_dots">Loading ...</string>
    <string name="refresh_icon" translatable="false">refresh</string>
    <string name="no_recommendations" translatable="false">No recommendations to show</string>
    <string name="share_from_beginning">Share from beginning</string>
    <string name="share_from_current_time">Share from current time</string>
    <string name="select_badges">Select and customize</string>
    <string name="your_badges">your tribe badges</string>
    <string name="badges_title_hint" translatable="false">Badge Title</string>
    <string name="badges_upload_icon" translatable="false">Upload Icon</string>
    <string name="badges_requirement" translatable="false">Requirement</string>
    <string name="badges_quantity" translatable="false">Quantity</string>
    <string name="badges_price_per_badge" translatable="false">Price per badge</string>
    <string name="badges_price_total" translatable="false">Total</string>
    <string name="badges_purchase_badges" translatable="false">Purchase Badges</string>
    <string name="badges_quantity_button_minus" translatable="false">-</string>
    <string name="badges_quantity_button_plus" translatable="false">+</string>
    <string name="badges_icon_dimen_text" translatable="false">PNG, GIF or SVG, Min. Size 512 x512 px</string>
    <string name="badges_no_found" translatable="false">No badges found</string>
    <string name="badges_manage_label" translatable="false">Manage Existing Badges</string>
    <string name="badges_state_label" translatable="false">Toggle active state</string>
    <string name="badges_template" translatable="false">TEMPLATE</string>
    <string name="badges_active">ACTIVE</string>
    <string name="badges_inactive">INACTIVE</string>
    <string name="badges_template_description">%s at least %s sats in this tribe. </string>
    <string name="badges_earn" >Earn</string>
    <string name="badges_spend" >Spend</string>
    <string name="badges_left" >of %s left</string>
    <string name="badges_header" translatable="false">Tribe Badges</string>
    <string name="badges_create_error">Failed to create badge</string>
    <string name="badges_state_error">Failed to change badge state</string>
    <string name="balance_too_low">Balance too low</string>
    <string name="boost_amount_too_low">Boost amount must be greater than 0</string>
    <string name="tribe_member_profile_send_sats">Send Sats</string>
    <string name="tribe_member_profile_earn_badges" translatable="false">Earn Badges</string>
    <string name="tribe_member_profile_on_chain" translatable="false">ON-CHAIN</string>
    <string name="tribe_member_profile_price_to_meet">Price to Meet:</string>
    <string name="tribe_member_profile_badges" translatable="false">Badges</string>
    <string name="tribe_member_profile_reputation">Reputation</string>
    <string name="tribe_member_profile_coding_languages">Coding Languages:</string>
    <string name="tribe_member_profile_post">Posts:</string>
    <string name="tribe_member_profile_twitter">Twitter:</string>
    <string name="tribe_member_profile_github">Github:</string>
    <string name="tribe_member_profile_contributions">Contributions</string>
    <string name="tribe_member_profile_earnings" translatable="false">Earnings</string>
    <string name="tribe_member" translatable="false">TRIBE MEMBER</string>
    <string name="known_badges_title" translatable="false">LIST OF KNOWN BADGES</string>
</resources>